# BagSeek

./: .env  .env_nas  .env_old  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE.md  README.md  docker-compose.yml  environment.cpu.yaml  environment.gpu.yaml  environment.yml  package-lock.json  package.json  start.sh  start_backend.sh  start_frontend.sh  test.py
docs/: FRONTEND.md
flask-backend/: .dockerignore  .gitignore  (+4 more)
old_preprocessing/preprocessing_structure/: .env.example  README.md  __init__.py  config.py  main.py  pyproject.toml  setup.py
old_preprocessing/preprocessing_structure/collectors/: __init__.py  base_collector.py  fencepost_image_collector.py  image_messages_collector.py  position_messages_collector.py  timestamps_collector.py
old_preprocessing/preprocessing_structure/core/: __init__.py  base.py  completion.py
old_preprocessing/preprocessing_structure/postprocessors/: __init__.py  adjacent_similarity_analyzer.py  positional_lookup_aggregator.py  representative_previews_stitcher.py
old_preprocessing/preprocessing_structure/preprocessing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
old_preprocessing/preprocessing_structure/processors/: __init__.py
old_preprocessing/preprocessing_structure/processors/mcap/: __init__.py  embedding_generator.py  positional_lookup_builder.py  timestamp_alignment_builder.py
old_preprocessing/preprocessing_structure/processors/rosbag/: __init__.py  fencepost_calculator.py  topics_extractor.py
old_preprocessing/preprocessing_structure/utils/: __init__.py  file_helpers.py  logger.py
(+199 files in other folders)
